# Beautypy

./: .gitignore  LICENSE  MANIFEST.in  Readme.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js  templates.md
beautypy/static/Bundles/CSSBundles/: output.css
beautypy/static/Bundles/JSBundles/: beautypy.js
beautypy/templates/: beauty_form.html  master.html  thanks.html
beautypy/templatetags/: Components.py  beautypy_forms.py
